<resources>
    <string name="app_name">CiboSupply</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Good Morning, Cido!</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="please_wait">Please Wait...</string>
    <string name="Internet_Connection_Not_Available">Internet Connection Not Available</string>
    <string name="myorders">My Orders</string>
    <string name="myaccount">My Account</string>
    <string name="categories">Categories</string>
    <string name="products">Poduct Title</string>
    <string name="price">Price</string>
    <string name="What_are_you_looking_for">What are you looking for?</string>
    <string name="Deal_of_the_Day">Deals</string>
    <string name="see_all_deals">See All Deals</string>
    <string name="bestsellers">My Products</string>
    <string name="see_more">See more</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fcategories">Categories</string>
    <string name="see_all_categories">See All Categories</string>
    <string name="datanotfound">Data Not Found!</string>
</resources>
