<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">



    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_yourorders"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/myorders" />
        <item
            android:id="@+id/nav_youraccount"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/myaccount" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/categories" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:visible="false"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:visible="false"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
